clang/test/BSC/Negative/Driver/rewrite-bsc/rewrite_bsc_wrong_pragma_and_header/a.hbs
#include "b.h"
#include <stdio.h>

static void fooA() {
  (void)GenericB<int>(2);
}